Java 11 compatibility pass + config tweaks
Replace jakarta.validation with javax.validation and .toList() with
.collect(Collectors.toList()) throughout config/service classes, to
match the RPi's Java 11 runtime. Also bumps the local application.yml
port (8081 -> 8082) and KitchenSide's seasonalDefault (25 -> 10).

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>